[gd_scene load_steps=6 format=3 uid="uid://duj2yhejqwaqh"]

[ext_resource type="Script" uid="uid://c6dlwqagiujdb" path="res://stat_ui.gd" id="1_v6flk"]
[ext_resource type="Theme" uid="uid://detj406ixpum0" path="res://ui/themes/general_theme.tres" id="2_v6flk"]
[ext_resource type="Texture2D" uid="uid://d4f5ff4bo04us" path="res://assets/ui_icons/luck_icon.png" id="3_h32m3"]
[ext_resource type="Texture2D" uid="uid://bjvyh8ul8phcn" path="res://assets/ui_icons/money-icon.png" id="4_d721n"]
[ext_resource type="Texture2D" uid="uid://1dhttya4ae3w" path="res://assets/ui_icons/key-icon.png" id="5_04sy5"]

[node name="StatUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_v6flk")

[node name="Luck" type="Node2D" parent="."]
position = Vector2(14, 130)

[node name="Icon" type="Sprite2D" parent="Luck"]
texture = ExtResource("3_h32m3")

[node name="Text" type="Label" parent="Luck"]
offset_left = 8.0
offset_top = -7.0
offset_right = 31.0
offset_bottom = 6.0
theme = ExtResource("2_v6flk")
theme_override_colors/font_outline_color = Color(0.388235, 0.447059, 0.705882, 1)
theme_override_constants/outline_size = 2
text = "100"
vertical_alignment = 1

[node name="Money" type="Node2D" parent="."]
position = Vector2(120, 130)

[node name="Icon" type="Sprite2D" parent="Money"]
texture = ExtResource("4_d721n")

[node name="Text" type="Label" parent="Money"]
offset_left = 8.0
offset_top = -7.0
offset_right = 31.0
offset_bottom = 6.0
theme = ExtResource("2_v6flk")
theme_override_colors/font_outline_color = Color(0.388235, 0.447059, 0.705882, 1)
theme_override_constants/outline_size = 2
text = "100"
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 75.0
offset_bottom = 50.0
theme = ExtResource("2_v6flk")

[node name="Key1" type="Sprite2D" parent="."]
visible = false
position = Vector2(68, 130)
texture = ExtResource("5_04sy5")

[node name="Key2" type="Sprite2D" parent="."]
visible = false
position = Vector2(82, 130)
texture = ExtResource("5_04sy5")
